# roblogreg

./: .buildinfo  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci-cd.yml
_sources/: example.ipynb.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/roblogreg/: index.rst.txt
_sources/autoapi/roblogreg/roblogreg/: index.rst.txt
autoapi/: index.html
autoapi/roblogreg/: index.html
autoapi/roblogreg/roblogreg/: index.html
docs/: Makefile  conf.py  make.bat
src/roblogreg/: __init__.py  roblogreg.py
tests/: test_roblogreg.py
