[tool.poetry]
name = "roblogreg"
version = "0.1.0"
description = "Robust logistic regression in Python"
authors = ["Tomas A Olego and Javier Bussi"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
myst-nb = "^0.16.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
ghp-import = "^2.1.0"
python-semantic-release = "^7.29.4"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
